# Trapdoor-Engine

./: .gitignore  .gitmodules  README.md  doyoubelieveingod.mkv  index.html  index.html?cmd=redirect&arubalp=12345  sender.py  teeee.tabs
C++ Engine/: .gitignore  C++ Engine.kdev4  CMakeLists.txt  CMakeSettings.json  countlines.sh  moveFiles.sh  renderdoc_debug.cap  renderdoc_release.cap
C++ Engine/.kdev4/: C++ Engine.kdev4
C++ Engine/assets/fonts/bettergrade/: BetterGrade.eot
C++ Engine/assets/fonts/dejavu/: .uuid
C++ Engine/assets/fonts/freefont/: .uuid
C++ Engine/assets/fonts/liberation/: .uuid
C++ Engine/assets/fonts/quicksand/: .uuid
C++ Engine/assets/models/: 32x32plane.dae  32x32plane_sided.dae  arrow.dae  kent.dae  supercube.dae
C++ Engine/assets/shaders/: debugarrow.frag  triangle.frag  triangle.vert
C++ Engine/assets/shaders/gbuffers/: dir_light_pass.frag  dir_light_pass.vert  firstpass.frag  firstpass.vert  nulltech.vert  point_light_pass.frag  point_light_pass.vert  secondpass.frag  secondpass.vert
C++ Engine/assets/shaders/postprocessing/: fboTest.frag  fboTest.vert  filter-fxaa.frag  filter-fxaa.vert
C++ Engine/assets/shaders/shadows/: shadow.frag  shadow.geom  shadow.vert
C++ Engine/assets/shaders/skybox/: skybox.frag  skybox.vert
C++ Engine/cmake/modules/: FindGLFW3.cmake
C++ Engine/design/: enginelayout.graphml
C++ Engine/include/: clock.h  glm.h  hashmaps.h  input.h  logging.h  profiler.h  std.h  util.h  window.h
C++ Engine/include/boost_1_79_0_linux/: b2  project-config.jam
C++ Engine/include/boost_1_79_0_linux/bin.v2/: project-cache.jam
C++ Engine/include/boost_lib/lib/: libboost_atomic.so.1.79.0  libboost_context.so.1.79.0  libboost_coroutine.so.1.79.0  libboost_fiber.so.1.79.0  libboost_filesystem.so.1.79.0  libboost_graph.so.1.79.0  libboost_iostreams.so.1.79.0  libboost_json.so.1.79.0  libboost_locale.so.1.79.0  libboost_math_c99l.so.1.79.0  libboost_math_tr1l.so.1.79.0  libboost_serialization.so.1.79.0  libboost_stacktrace_addr2line.so.1.79.0  libboost_stacktrace_backtrace.so.1.79.0  libboost_stacktrace_basic.so.1.79.0  libboost_stacktrace_noop.so.1.79.0  libboost_unit_test_framework.so.1.79.0  libboost_wserialization.so.1.79.0
C++ Engine/include/boost_lib/lib/cmake/boost_atomic-1.79.0/: libboost_atomic-variant-shared.cmake  libboost_atomic-variant-static.cmake
C++ Engine/include/boost_lib_windows/lib/: libboost_atomic-vc143-mt-gd-x32-1_79.lib  libboost_atomic-vc143-mt-x64-1_79.lib  libboost_chrono-vc143-mt-x64-1_79.lib  libboost_filesystem-vc143-mt-x64-1_79.lib  libboost_regex-vc143-mt-x32-1_79.lib  libboost_thread-vc143-mt-x32-1_79.lib  libboost_thread-vc143-mt-x64-1_79.lib
C++ Engine/include/data/: DataConv.h  NBT.h  resources.h  sql.h  user.h
C++ Engine/include/direct-to-video/cmake/: FindFFmpeg.cmake
C++ Engine/include/game/: TestDisplay.h
C++ Engine/include/imgui/: imconfig.h
C++ Engine/include/nativefiledialog/: CMakeLists.txt
C++ Engine/include/parshapes/: par_shapes.h
C++ Engine/include/renderer/: camera.h  gl.h  shader.h
C++ Engine/include/renderer/ui/: debug.h  raycasting.h
C++ Engine/include/world/: GameRegistry.h  World.h
C++ Engine/libs/: .gitignore
C++ Engine/libs/boost_lib_windows/lib/: libboost_atomic-vc143-mt-gd-x32-1_80.lib  libboost_atomic-vc143-mt-gd-x64-1_79.lib  libboost_atomic-vc143-mt-gd-x64-1_80.lib  libboost_atomic-vc143-mt-x32-1_79.lib  libboost_atomic-vc143-mt-x32-1_80.lib  libboost_atomic-vc143-mt-x64-1_80.lib  libboost_chrono-vc143-mt-gd-x32-1_79.lib  libboost_chrono-vc143-mt-gd-x32-1_80.lib  libboost_chrono-vc143-mt-gd-x64-1_79.lib  libboost_chrono-vc143-mt-gd-x64-1_80.lib  libboost_chrono-vc143-mt-x32-1_79.lib  libboost_chrono-vc143-mt-x32-1_80.lib  libboost_chrono-vc143-mt-x64-1_80.lib  libboost_filesystem-vc143-mt-x32-1_79.lib  libboost_filesystem-vc143-mt-x32-1_80.lib  libboost_filesystem-vc143-mt-x64-1_80.lib  libboost_iostreams-vc143-mt-gd-x32-1_80.lib  libboost_iostreams-vc143-mt-gd-x64-1_80.lib  libboost_iostreams-vc143-mt-x32-1_80.lib  libboost_iostreams-vc143-mt-x64-1_80.lib  libboost_regex-vc143-mt-x32-1_80.lib  libboost_regex-vc143-mt-x64-1_79.lib  libboost_regex-vc143-mt-x64-1_80.lib  libboost_thread-vc143-mt-gd-x32-1_79.lib  libboost_thread-vc143-mt-gd-x32-1_80.lib  libboost_thread-vc143-mt-gd-x64-1_79.lib  libboost_thread-vc143-mt-gd-x64-1_80.lib  libboost_thread-vc143-mt-x32-1_80.lib  libboost_thread-vc143-mt-x64-1_80.lib  libboost_zlib-vc143-mt-gd-x32-1_80.lib  libboost_zlib-vc143-mt-gd-x64-1_80.lib  libboost_zlib-vc143-mt-x32-1_80.lib  libboost_zlib-vc143-mt-x64-1_80.lib
C++ Engine/libs/discord/: CMakeLists.txt
C++ Engine/libs/nativefiledialog/: CMakeLists.txt
C++ Engine/src/: config.h.in  font.h  globals.cpp  input.cpp  input.h  logging.h  main.cpp  profiler.cpp  profiler.h  std.h  util.cpp  window.cpp  window.h
C++ Engine/src/data/: DataConv.h  DataStreams.h  NBT.cpp  NBT.h  resources.cpp  sql.cpp  user.cpp
C++ Engine/src/game/: TestDisplay.cpp  TestDisplay.h
C++ Engine/src/imgui/: GraphEditor.cpp  ImCurveEdit.cpp  ImGradient.cpp  ImGuizmo.cpp  ImSequencer.cpp  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
C++ Engine/src/renderer/: camera.cpp  camera.h  gl.cpp  gl.h  renderer.cpp  renderer.h  shader.cpp  shader.h
C++ Engine/src/renderer/ui/: debug.cpp  debug.h  ui.cpp  ui.h  utils.cpp  utils.h
C++ Engine/src/world/: Entity.cpp  Entity.h  GameRegistry.cpp  GameRegistry.h  World.cpp  World.h
Engine 2: Electric boogaloo/project/: CMakeLists.txt  CMakeListsOLD.txt  CMakeListsOLD2.txt
Engine 2: Electric boogaloo/project/include/config/: config.h.in
Engine 2: Electric boogaloo/project/src/: main.cpp
Engine 2: Electric boogaloo/project/src/config/: version.h
Engine 2: Electric boogaloo/project/src/display/: Camera.cpp  Camera.h  DisplayManager.cpp  DisplayManager.h  Scene.cpp  Scene.h
Engine 2: Electric boogaloo/project/src/tools/: maths.cpp  maths.h
Engine 2: Electric boogaloo/project/src/tools/data/: ArrayList.cpp  ArrayList.h  BinaryTree.h
(+1329 files in other folders)
